--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap'); 
 
 * {
     padding: 0;
@@ -7,20 +6,20 @@
     font-family: 'Roboto', sans-serif;
 }
 
-/*
 body {
-    background: #ff0000;
+    background: #333;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    color: #fff;
 }
 
 .container {
-    background: #ff0000;
+    background: #333;
     border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .35);
+    box-shadow: -5px 5px 15px #2A4A64;
     position: relative;
     overflow: hidden;
     width: 768px;
@@ -47,31 +46,76 @@ body {
     margin: 15px 0 10px ;
 }
 
-.container button {
+.container .btn {
+    color: #fff;
     font-size: 12px;
-    padding: 10px;
-    border: 1px solid transparent;
-    border-radius: 8px;
+    padding: 15px 40px;
+    border: 1px solid #fff;
+    border-radius: 12px;
     letter-spacing: .5px;
     text-transform: uppercase;
     margin-top: 10px;
     cursor: pointer;
     transition: .2s;
+    z-index: 0;
+    position: relative;
 }
 
-.container button:hover {
-    transform: scale(.9);
-    background-color: #5c7a94;
-   
+.container .btn::after {
+    content:"";
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
 }
 
-.container button.hidden{
-    background-color: transparent;
-    border-color: #fff;
+.container .btn::before {
+    content: "";
+    background: linear-gradient(
+        45deg, 
+        #2A4A64, #78baf0, #406E96, #D0DFEB, #042036, #45aeff
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 600%;
+    z-index: -1;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: blur(8px);
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+    opacity: 0;
+    animation: movimento 20s linear;
 }
+
+@keyframes movimento {
+ 0% {background-position: 0 0;}
+ 50% {background-position: 400% 0;}
+ 100% {background-position: 0 0;} 
+}
+
+.container .btn:hover::before {
+    opacity: 1;
+}
+
+.container .btn:active::after {
+    background: transparent;
+}
+
+.container .btn:active {
+    color: #000;
+    font-weight: bold;
+}
+
+
 
 .container form {
-    background: #ff0000;
+    background: #333;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,8 +125,9 @@ body {
 }
 
 .container input {
-    background: #eee;
+    background: #333;
     border: none;
+    border-bottom: 1px solid #fff;
     margin: 8px 0;
     padding: 10px 15px;
     font-size: 13px;
@@ -152,4 +197,3 @@ body {
     right: 0;
     transform: translateX(0);
 }
-*/
