--- a/geral.css
+++ b/geral.css
@@ -13,12 +13,13 @@
 }
 
 :root {
-    --bg: #DDEEDD;
+    --bg: #DEDEDE;
     --text: #f5f5f5;
-    --secundaria: #2A4A64;
     --principal: #406E96;
+    --secundaria: #2A4A64;
     --terciaria: #1F3A50;
 }
+
 
 ::-webkit-scrollbar {
     height: 0;
@@ -34,7 +35,7 @@
     border-radius: .5rem;
 }
 body {
-    background-color: #8dccff;
+    background-color: var(--bg);
 }
 
 /* header bc administrador*/
@@ -131,4 +132,16 @@ header {
 
 .sidebar.abrir ul li {
     margin-top: 1rem;
+}
+
+/*corpo*/
+main {
+    height: 100vh;
+    width: 80%;
+    border: 1px solid red;
+    margin: 0 10%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
 }
