--- a/home.css
+++ b/home.css
@@ -1,9 +1,29 @@
-main {
-    height: 100vh;
-    width: 80%;
-    margin: 0 10%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
+:root {
+    --bg: #DEDEDE;
+    --text: #f5f5f5;
+    --principal: #406E96;
+    --secundaria: #2A4A64;
+    --terciaria: #1F3A50;
 }
+
+
+.titulo {
+    background-color: var(--principal);
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 8rem;
+    margin-top: 2rem;
+}
+.titulo h3 {
+    font-size: 2rem;
+}
+
+.avaliar {
+    position: relative;
+    border: 1px solid red;
+    margin-top: 3rem;
+}
+
