--- a/usuarios/usuario.css
+++ b/usuarios/usuario.css
@@ -6,44 +6,6 @@
     --terciaria: #1F3A50;
 }
 
-.space {
-    justify-content:space-around;
+main{
+border-color:red;
 }
-
-.titulo {
-    background-color: var(--principal);
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    height: 8rem;
-    margin-top: 2rem;
-}
-
-.titulo h3 {
-    font-size: 2rem;
-}
-
-.btn-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-    width: 50vw;
-    margin: 0 auto;
-    max-width: 100%;
-  }
-
-  .btn {
-    flex: 1 1 auto;
-    margin: 10px;
-    padding: 30px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    background-color: #2A4A64;
-   }
