--- a/geral.css
+++ b/geral.css
@@ -145,3 +145,10 @@ main {
     flex-direction: column;
     position: absolute;
 }
+
+.botao{
+    background-color:#2A4A64;
+    color:#f5f5f5;
+    width: 10rem;
+    height: 2rem;
+}
