--- a/home.css
+++ b/home.css
@@ -44,5 +44,8 @@
     color:#f5f5f5;
     width: 10rem;
     height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
