--- a/home.css
+++ b/home.css
@@ -25,7 +25,7 @@
     margin-top: 2rem;
     font-size: 2rem;
     text-decoration: underline ;
-   
+   line-height: 10rem;
 
 }
 .avaliar {
@@ -34,18 +34,19 @@
     margin-top: 3rem;
     background-color: #406E96;
     display: flex;
-    justify-content: center;
+    flex-direction: flex-end;
+    justify-content:space-between;
     align-items: center;
+    height: 15rem;
+    width: 40rem;
     
 }
 
 .botao{
     background-color:#2A4A64;
     color:#f5f5f5;
-    width: 10rem;
+    width: 50rem;
     height: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border: 1px solid red;
 }
 
