--- a/usuarios/usuario.css
+++ b/usuarios/usuario.css
@@ -6,7 +6,55 @@
     --terciaria: #1F3A50;
 }
 
+.container {
+    display:inline-block;
+  }
+
 main{
 border-color:red;
 }
 
+.avaliar {
+    position: relative;
+    border: 1px solid red;
+    margin-top: 3rem;
+    background-color: #406E96;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.botao{
+    background-color:#2A4A64;
+    color:#f5f5f5;
+    width: 10rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-form {
+    display: flex;  /* Usa flexbox para alinhar os elementos */
+    align-items: center; /* Alinha verticalmente */
+}
+
+.search-form input {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px 0 0 4px;
+    width: 250px; /* Ajuste o tamanho conforme necessário */
+}
+
+.search-form button {
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    background-color: #007BFF;
+    color: white;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+}
+
+.search-form button:hover {
+    background-color: #0056b3;
+}
