--- a/usuarios/usuario.css
+++ b/usuarios/usuario.css
@@ -91,7 +91,7 @@ border-color:red;
 }
 
 .inputID {
-    width: 100%; /* Largura total do input */
+    width: 50%; /* Largura total do input */
     padding: 10px;
     border: none;
     border-radius: 4px; 
@@ -107,5 +107,5 @@ border-color:red;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 300px; /* Largura do container */
+    width: 50%; /* Largura do container */
 }
