--- a/avaliar.css
+++ b/avaliar.css
@@ -8,7 +8,6 @@
 
 body{
     background-color:#DEDEDE;
-
         height: 100vh;
         width: 80%;
         border: 1px solid red;
@@ -18,38 +17,42 @@ body{
         flex-direction: column;
         position: absolute;
     }
-
+.avaliaresenha{
+    font-size:3rem;
+}
+    p{
+        margin-top: 2rem;
+        font-size: 2rem;
+        text-decoration: underline ;
+       line-height: 10rem;
+    }
 
 .cardazul{
     background-color: #406E96;
     border: 1px solid red;
     color: #f5f5f5;
     width: 100%;
+    height: 100rem;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    text-align: center;
-   justify-content: center;
-   align-items: center;
+
 }
-
-p{
-    margin-top: 2rem;
-    font-size: 2rem;
-    text-decoration: underline ;
-   line-height: 10rem;
-   display: flex;
-   text-align: center;
-   justify-content: center;
-   align-items: center;
-}
-
-
-.cardbranco{
+.cardbranco1{
     background-color:#DEDEDE;
     width: 80%;
+    margin-top:3rem ;
     display: flex;
     
+    align-content:start;
 }
-.resenha{
 
+.cardbranco2{
+    background-color:#DEDEDE;
+    width: 90%;
+    margin-top:3rem ;
+    display: flex;
+    justify-content:center;
+    border-color: red;
 }
