--- a/home.css
+++ b/home.css
@@ -37,8 +37,8 @@
     flex-direction: flex-end;
     justify-content:space-between;
     align-items: center;
-    height: 15rem;
-    width: 40rem;
+    height:20rem;
+    width: 80%;
     
 }
 
