--- a/home.css
+++ b/home.css
@@ -16,6 +16,7 @@
     width: 60%;
     height: 8rem;
     margin-top: 2rem;
+    
 }
 .titulo h3 {
     font-size: 2rem;
@@ -32,7 +33,7 @@
     position: relative;
     border: 1px solid red;
     margin-top: 3rem;
-    background-color: #406E96;
+    background-color:var(--principal);
     display: flex;
     flex-direction: flex-end;
     justify-content:space-between;
@@ -41,12 +42,22 @@
     width: 80%;
     
 }
+.imglivro{
+    background-color:var(--secundaria);
+    color:#f5f5f5;
+    width: 20rem;
+    height: 15rem;
+    border: 1px solid red;
+    margin-left: 1rem;
+}
+
 
 .botao{
-    background-color:#2A4A64;
+    background-color:var(--secundaria);
     color:#f5f5f5;
     width: 50rem;
     height: 2rem;
     border: 1px solid red;
+    margin-right: 1rem;
 }
 
