css h0me card de img

--- a/home.css
+++ b/home.css
@@ -22,6 +22,10 @@
     font-size: 2rem;
 }
 
+.card{
+    display: flex;
+    flex-direction: column;
+}
 .linhavaliar{
     margin-top: 2rem;
     font-size: 2rem;
@@ -55,8 +59,7 @@
     height: 15rem;
     border: 1px solid red;
     margin-left: 1rem;
-    display: flex;
-    flex-direction: column;
+   
 }
 
 
