--- a/home.css
+++ b/home.css
@@ -25,6 +25,9 @@
 .card{
     display: flex;
     flex-direction: column;
+    border: 1px solid red;
+    justify-content:space-between;
+    flex-direction: column;
 }
 .linhavaliar{
     margin-top: 2rem;
@@ -37,15 +40,9 @@
     position: relative;
     border: 1px solid red;
     margin-top: 3rem;
-
     background-color:var(--principal);
-
-    background-color: var(--principal);
-
-    background-color: var(--principal);
-
     display: flex;
-    flex-direction: flex-end;
+    flex-direction: column;
     justify-content:space-between;
     align-items: center;
     height:20rem;
