--- a/geral.css
+++ b/geral.css
@@ -52,6 +52,7 @@ header {
     background: var(--secundaria);
     top: 0;
     position: fixed;
+    z-index: 1000;
 }
 .nome {
     display: flex;
