--- a/home.css
+++ b/home.css
@@ -28,11 +28,12 @@
     margin-top: 3rem;
     background-color:var(--principal);
     display: flex;
-    flex-direction: column;
+ 
     justify-content:space-between;
     align-items: center;
     height:20rem;
     width: 80%;
+    flex-wrap: wrap;
    
 }
 .linhavaliar{
@@ -48,7 +49,7 @@
     margin-top: 3rem;
     background-color:var(--principal);
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content:space-between;
     align-items: center;
     height:20rem;
