--- a/geral.css
+++ b/geral.css
@@ -3,7 +3,6 @@
 * {
  margin: 0;
  padding: 0;
- color: var(--text);
  font-family: 'Roboto', sans-serif;
  box-sizing: border-box;
  text-decoration: none;
@@ -14,7 +13,7 @@
 
 :root {
     --bg: #DEDEDE;
-    --text: #f5f5f5;
+    --text: #000000;
     --principal: #406E96;
     --secundaria: #2A4A64;
     --terciaria: #1F3A50;
