--- a/home.css
+++ b/home.css
@@ -21,7 +21,18 @@
 .titulo h3 {
     font-size: 2rem;
 }
-
+.avaliar {
+    position: relative;
+    border: 1px solid red;
+    margin-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    height:20rem;
+    width: 80%;
+    
+}
 .card{
     position: relative;
     border: 1px solid red;
@@ -29,11 +40,27 @@
     background-color:var(--principal);
     display: flex;
  
-    justify-content:space-between;
+    justify-content:space-around;
     align-items: center;
     height:20rem;
     width: 80%;
     flex-wrap: wrap;
+   
+}
+.card div{
+    border: 1px solid red;
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+
+.imglivro{
+   height: 100%;
+   width: auto;
    
 }
 .linhavaliar{
@@ -43,28 +70,8 @@
    line-height: 10rem;
 
 }
-.avaliar {
-    position: relative;
-    border: 1px solid red;
-    margin-top: 3rem;
-    background-color:var(--principal);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-between;
-    align-items: center;
-    height:20rem;
-    width: 80%;
-    
-}
-.imglivro{
-    background-color:var(--secundaria);
-    color:#f5f5f5;
-    width: 20rem;
-    height: 15rem;
-    border: 1px solid red;
-    margin-left: 1rem;
-   
-}
+
+
 
 
 .botao{
