--- a/geral.css
+++ b/geral.css
@@ -13,7 +13,7 @@
 
 :root {
     --bg: #DEDEDE;
-    --text: #000000;
+    --text: #ffffff;
     --principal: #406E96;
     --secundaria: #2A4A64;
     --terciaria: #1F3A50;
